--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "guzzlehttp/guzzle": "^6.3",
         "sensiolabs/security-checker": "^4.1",
+        "symfony/cache": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
