Use env for store config

--- a/.env.dist
+++ b/.env.dist
@@ -5,6 +5,9 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=323f4241d549a8837a6f184f0496478f
+TIMETABLE_HOST=https://www.example.com/
+SUBSTITUTIONS_DATE_SCHEMAS=j-m,d-m
+TIMETABLE_SYMBOL=o1
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
