Add timetable and log url

--- a/.env.dist
+++ b/.env.dist
@@ -8,6 +8,7 @@ APP_SECRET=323f4241d549a8837a6f184f0496478f
 TIMETABLE_HOST=https://www.example.com/
 SUBSTITUTIONS_DATE_SCHEMAS=d-m,j-m
 TIMETABLE_SYMBOL=o1
+TIMETABLE_URL=https://www.example.com/plan_lekcji/plany/o1.html
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
