--- a/.env.dist
+++ b/.env.dist
@@ -9,6 +9,7 @@ TIMETABLE_HOST=https://www.example.com/
 SUBSTITUTIONS_DATE_SCHEMAS=d-m,j-m
 TIMETABLE_SYMBOL=o1
 TIMETABLE_URL=https://www.example.com/plan_lekcji/plany/o1.html
+LOG_URL=https://log.example.com/login
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
