--- a/.env.dist
+++ b/.env.dist
@@ -10,6 +10,7 @@ SUBSTITUTIONS_DATE_SCHEMAS=d-m,j-m
 TIMETABLE_SYMBOL=o1
 TIMETABLE_URL=https://www.example.com/plan_lekcji/plany/o1.html
 LOG_URL=https://log.example.com/login
+HOURS_URL=https://example.com/hours
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
