--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/leszcze/planer2.git"
+    "url": "git+https://github.com/mklkj/planer2.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "mklkj <m.pich@outlook.com>",
+  "license": "MIT",
   "bugs": {
-    "url": "https://gitlab.com/leszcze/planer2/issues"
+    "url": "https://github.com/mklkj/planer2/issues"
   },
-  "homepage": "https://gitlab.com/leszcze/planer2#README",
+  "homepage": "https://github.com/mklkj/planer2#readme",
   "dependencies": {
-    "@symfony/webpack-encore": "^0.19.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
     "webpack-notifier": "^1.5.1"
