Fix symfony server

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 ###< symfony/framework-bundle ###
 .idea/
 node_modules/
+
+###> symfony/web-server-bundle ###
+.web-server-pid
+###< symfony/web-server-bundle ###
