--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/mklkj/planer2#readme",
   "dependencies": {
+    "@symfony/webpack-encore": "^0.19.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
     "webpack-notifier": "^1.5.1"
