--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@symfony/webpack-encore": "^0.19.0",
     "node-sass": "^4.7.2",
+    "normalize.css": "^8.0.0",
     "sass-loader": "^6.0.7",
     "webpack-notifier": "^1.5.1"
   }
