--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
   - ./vendor/bin/simple-phpunit install
 
 script:
-  - ./vendor/bin/simple-phpunit
+  - ./vendor/bin/simple-phpunit --coverage-clover=coverage.xml
   # this checks that the YAML config files contain no syntax errors
   - ./bin/console lint:yaml config
   # this checks that the Twig template files contain no syntax errors
@@ -38,3 +38,6 @@ script:
   - ./bin/console security:check --end-point=http://security.sensiolabs.org/check_lock
   # this checks that the composer.json and composer.lock files are valid
   - composer validate --strict
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
