--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "guzzlehttp/guzzle": "^6.3",
-        "sensiolabs/security-checker": "^4.1",
+        "sensiolabs/security-checker": "^5.0",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "^4.0",
         "symfony/cache": "^4.0",
@@ -50,7 +50,7 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
-            "security-checker security:check --end-point=http://security.sensiolabs.org/check_lock": "script"
+            "security-checker security:check --end-point=http://security.symfony.com/check_lock": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
