--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
   # this checks that the Twig template files contain no syntax errors
   - ./bin/console lint:twig templates
   # this checks that the application doesn't use dependencies with known security vulnerabilities
-  - ./bin/console security:check --end-point=http://security.sensiolabs.org/check_lock
+  - ./bin/console security:check --end-point=http://security.symfony.com/check_lock
   # this checks that the composer.json and composer.lock files are valid
   - composer validate --strict
 
